cambios nuevos de other info

--- a/src/app/feature/falcon/app/falcon-app-event-other-info/falcon-app-event-other-info.component.html
+++ b/src/app/feature/falcon/app/falcon-app-event-other-info/falcon-app-event-other-info.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class=" border-gray-800 h-auto w-fit rounded-lg">
   <h5 class="mb-0">Other Info</h5>
 </div>
-<div>
+<div class=" border-gray-800 h-auto w-90 rounded-lg">
   <div class="d-flex flex-between-center"><label class="form-label" for="organizer">Organizer</label><button class="btn btn-link btn-sm pe-0" type="button">Add New</button></div>
 </div>
 <div>
