--- a/src/app/feature/falcon/allorden/allorden.component.html
+++ b/src/app/feature/falcon/allorden/allorden.component.html
@@ -13,5 +13,7 @@
       <div class="stat-value font-medium pt-6 pb-4 text-cyan-400">23.43K</div>
     </div>
   </div>
-  <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">All Orders ></h2>
+  <div>
+   <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">All Orders ></h2>
+  </div>
 </div>
