--- a/src/app/feature/falcon/revenues/revenues.component.html
+++ b/src/app/feature/falcon/revenues/revenues.component.html
@@ -13,5 +13,7 @@
       <div class=" stat-value font-medium pt-6 pb-4 text-gray-400 -mt-7">$43,594K</div>
     </div>
   </div>
-  <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">Statistics ></h2>
-</div>
+  <div>
+   <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">Statistics ></h2>
+  </div>
+  </div>
