--- a/src/app/feature/falcon/revenues/revenues.component.html
+++ b/src/app/feature/falcon/revenues/revenues.component.html
@@ -14,6 +14,6 @@
     </div>
   </div>
   <div>
-   <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">Statistics ></h2>
+   <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="">Statistics ></h2>
   </div>
-  </div>
+</div>
