--- a/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
+++ b/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
@@ -103,13 +103,13 @@
           <a class="link link-hover text-black text-xl font-semibold">Canon Standard Zoom Lens</a>
           <a class="link link-hover text-gray-400">Camera</a>
           <h1 class="card-title text-orange-500 text-2xl">
-              $360 <del class="ms-2 fs--1 text-gray-400 text-sm">$400</del>
+              $400 <del class="ms-2 fs--1 text-gray-400 text-sm">$500</del>
           </h1>
-          <h3 class="text-base ">
-              Shipping Cost: $24
+          <h3 class="text-base text-gray-700">
+              Shipping Cost: $60
           </h3>
           <h4 class="text-sm pb-6 ">
-              Stock: <span class="text-emerald-400	font-medium ">Available</span>
+              Stock: <span class="text-red-600	font-medium ">Sold-Out</span>
           </h4>
           <div class="flex items-stretch ... ">
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
@@ -150,13 +150,13 @@
   <figure><img src="https://falconreact.prium.me/static/media/4.838e0aac.jpg"
           alt="Shoes" /></figure>
   <div class="card-body">
-      <a class="link link-hover text-black text-xl font-semibold">Logitech G305 Gaming <br> Mouse</a>
-      <a class="link link-hover text-gray-400">Computer & Accessories</a>
+      <a class="link link-hover text-black text-xl font-semibold">Apple iPad Air 2019 (3GB RAM, 128GB ROM, 8MP Main Camera)</a>
+      <a class="link link-hover text-gray-400">Mobile & Tabs</a>
       <h1 class="card-title text-orange-500 text-2xl">
-          $47.5  <del class="ms-2 fs--1 text-gray-400 text-sm">$95</del>
+          $562.5 <del class="ms-2 fs--1 text-gray-400 text-sm">$750</del>
       </h1>
       <h3 class="text-base ">
-          Shipping Cost: $20
+          Shipping Cost: $47
       </h3>
       <h4 class="text-sm pb-6 ">
           Stock: <span class="text-emerald-400	font-medium ">Available</span>
@@ -192,6 +192,7 @@
   </div>
   </div>
 </div>
+<!---->
 
 <!--
 <div class="card w-96 bg-base-100 shadow-xl">
