--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -139,6 +139,8 @@
             <li><a [routerLink]="['falcon-saas-revenue']">Revenue</a></li>
             <li><a [routerLink]="['falcon-saas-conversion']">Conversion</a></li>
             <li><a [routerLink]="['falcon-APP-eemail-eemail-detail']">Email Datail</a></li>
+            <li><a [routerLink]="['falcon-app-event-TicketPrice']">Ticket Price</a></li>
+
 
         </div>
     </div>
