--- a/src/app/feature/falcon/eemail/falcon-app-eemail-composee/falcon-app-eemail-composee.component.html
+++ b/src/app/feature/falcon/eemail/falcon-app-eemail-composee/falcon-app-eemail-composee.component.html
@@ -1,12 +1,12 @@
 <div class="border border-gray-400 h-auto w-fit rounded-lg">
     <div class="bg-slate-100 flex items-center p-3">
-        <span>New message</span>
-        <div class="divider"></div>
+        <span class="text-2xl text-black">New message</span>
 
     </div>
+    <div class="divider"></div>
 
     <div class="flex flex-col w-full border-opacity-50">
-        <div>
+        <div class="flex items-center">
             <input type="text" placeholder="To" class="input input-ghost w-full h-auto" />
         </div>
         <div class="divider"></div>
