1er diseño de la plantilla SHARED_FILES

--- a/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-shared-files/falcon-dashboard-saas-shared-files.component.html
+++ b/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-shared-files/falcon-dashboard-saas-shared-files.component.html
@@ -1,1 +1,24 @@
-<p>falcon-dashboard-saas-shared-files works!</p>
+<div class="flex justify-center mt-10 card w-96 bg-base-100 border border-slate-200 drop-shadow-md rounded-sm">
+
+    <div class="flex flex-row justify-center px-3  card w-96 bg-slate-50 border border-slate-200 drop-shadow-md rounded-sm">
+      <span>Shared Files</span>
+      <span class="grow"></span>
+      <a class="link link-hover text-blue-600">View All</a>
+    </div>
+
+    <div class="px-3 py-2 flex flex-row">
+      <img src="https://falconreact.prium.me/static/media/5.09ac6a83.jpg" alt="smart watch" class="h-10 w-10">
+      <div class="flex flex-col pl-1">
+        <a class="link link-hover text-gray-600 text-sm">apple-smart-watch.png</a>
+        <div class="flex flex-row">
+            <div class="pr-2"><span class="semi-bold text-gray-500 text-xs">Antony </span> </div>
+            <div><span class="semi-bold text-gray-500 text-xs">Just Now </span> </div>
+        </div>
+      </div>
+      <span class="grow"></span>
+      <div class="pr-1"><a role="button" href="https://falconreact.prium.me/static/media/cloud-download.2dc713ed.svg" download="" class="btn btn-outline btn-info btn-xs"><img src="https://falconreact.prium.me/static/media/cloud-download.2dc713ed.svg" alt="Download" width="15"></a></div>
+      <div><button class="btn btn-outline btn-info btn-xs"><img src="https://falconreact.prium.me/static/media/edit-alt.e9942aac.svg" alt="Edit" width="15"></button></div>
+
+    </div>
+
+</div>
