--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -139,6 +139,7 @@
             <li><a [routerLink]="['falcon-saas-revenue']">Revenue</a></li>
             <li><a [routerLink]="['falcon-saas-conversion']">Conversion</a></li>
             <li><a [routerLink]="['falcon-APP-eemail-eemail-detail']">Email Datail</a></li>
+            <li><a [routerLink]="['falcon-dashboard-saas-TRANSACTION_SUMMARY']">TRANSACTION SUMMARY</a></li>
 
         </div>
     </div>
