--- a/src/app/feature/falcon/social/followers/falcon-social-followers-perfil/falcon-social-followers-perfil.component.html
+++ b/src/app/feature/falcon/social/followers/falcon-social-followers-perfil/falcon-social-followers-perfil.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded shadow-md ml-5">
   <div class="h-64">
-    <img class="h-40 w-full" src="https://futurizable.com/wp-content/uploads/2018/05/internet-of-things@2x.jpg" alt="">
+    <img class="h-40 w-full" src="/assets/foondo.jpg" alt="">
     <div class="avatar bottom-20 ml-4">
       <div class=" w-44 rounded-full border-8 border-white shadow-lg">
         <img src="https://falconreact.prium.me/static/media/2.20b1aba3.jpg" alt="">
