--- a/src/app/feature/falcon/dasboard/social-create-post/social-create-post.component.html
+++ b/src/app/feature/falcon/dasboard/social-create-post/social-create-post.component.html
@@ -1,63 +1,63 @@
-<div class="mt-4 ml-3 shadow-lg rounded w-11/12">
+<div class="mt-4 ml-3 shadow-lg rounded w-7/12">
 
     <div class="flex flex-col-1 bg-gray-50">
-        <div class="w-11/12">
-            <div class="pt-4 pl-5 h-14 ">
+        <div class="w-11/12 h-16">
+            <div class="pt-5 pl-5 h-14">
                 <div class="avatar ">
-                    <div class="w-6 h-6 rounded-full">
-                        <img src="https://placeimg.com/192/192/people" />
+                    <div class="w-7 h-7 rounded-full">
+                        <img src="https://falconreact.prium.me/static/media/1.f7d5569c.jpg" />
                     </div>
-                    <div class="ml-2 font-semibold">Create Post</div>
+                    <div class="ml-2 font-semibold text-xl">Create Post</div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="">
-        <textarea class="textarea w-full" placeholder="What do you want to talk about?"></textarea>
+        <textarea class="textarea w-full text-xl font-medium h-28" placeholder="What do you want to talk about?" ></textarea>
     </div>
 
-    <div class="flex flex-row-2 border-y-2">
+    <div class="flex flex-row-2 border-y-2 ">
         <div class="flex flex-row-2 mb-2 pt-1">
-            <div class="text-gray-500 text-xs font-extrabold pl-2 pr-1">+</div>
-            <div class="text-gray-500 text-xs font-bold mt-0.5">Add hashtag</div>
+            <div class="text-gray-500 text-base font-extrabold pl-2 pr-1 ml-2">+</div>
+            <div class="text-gray-500 text-base font-medium mt-0.5">Add hashtag</div>
         </div>
         <div class="ml-2">
             <input type="text" placeholder="Help the right person to see"
-                class="input rounded text-xs h-5 w-96 p-0 ml-1" />
+                class="input rounded text-base mt-1 h-6 w-96 p-0 ml-1" />
         </div>
     </div>
 
     <div class="mb-3 h-12">
         <div class="flex flex-row-2">
-            <div class="flex flex-row-3 mr-20">
+            <div class="flex flex-row-3 text-gray-500">
                 <div>
-                    <button class="flex flex-col-2 ml-6 mt-2 px-2 py-1 rounded-3xl bg-gray-50 hover:bg-gray-200">
-                        <div class="text-sm">📸 Imagen</div>
+                    <button class="flex flex-col-2 ml-4 mt-2 px-2 pb-1 rounded-3xl bg-gray-50 hover:bg-gray-200">
+                        <div class="text-lg font-medium">📸 Image</div>
                     </button>
                 </div>
 
                 <div>
-                    <button class="flex flex-col-2 ml-2 mt-2 px-2 py-1 rounded-3xl bg-gray-50  hover:bg-gray-200">
-                        <div class="text-sm">📅 Event</div>
+                    <button class="flex flex-col-2 ml-2 mt-2 px-2 pb-1 rounded-3xl bg-gray-50  hover:bg-gray-200">
+                        <div class="text-lg font-medium">📅 Event</div>
                     </button>
                 </div>
 
                 <div>
-                    <button class="flex flex-col-2 ml-2 mt-2 px-2 py-1 rounded-3xl bg-gray-50  hover:bg-gray-200">
-                        <div class="text-sm">📍 Check In</div>
+                    <button class="flex flex-col-2 ml-2 mt-2 px-2 pb-1 rounded-3xl bg-gray-50 text-xl hover:bg-gray-200">
+                        <div class="text-lg font-medium">📍 Check In</div>
                     </button>
                 </div>
             </div>
 
-            <div class="ml-96" >
+            <div class="ml-14" >
                 <select class="w-12 h-7 border-white border-2">
                     <option disabled selected>🌍</option>
                     <option class="rounded-sm">🌍 Public</option>
                     <option>🔒 Private</option>
                     <option>👩‍👧 Friends</option>
                 </select>
-                <button class="ml-2 mt-2 bg-blue-600 py-1 px-11 h-7 text-white text-sm rounded">
+                <button class="ml-2 mt-2 bg-blue-600 py-1 px-11 h-8 w-36 text-white text-sm rounded hover:bg-blue-700">
                     Share
                 </button>
             </div>    
