--- a/src/app/feature/falcon/dasboard/social/you-may-interested/you-may-interested.component.html
+++ b/src/app/feature/falcon/dasboard/social/you-may-interested/you-may-interested.component.html
@@ -1,20 +1,20 @@
-<div class="shadow-lg border-2 w-96 rounded-lg">
-    <div class="w-90 bg-gray-50 h-12">
-        <div class=" ml-3 pt-3">
-            <div class="text-lg font-semibold">You may interested</div>
+<div class="shadow-lg border-2 w-80 rounded-lg">
+    <div class="w-90 bg-gray-50 h-16">
+        <div class=" ml-4 pt-3">
+            <div class="text-2xl font-semibold">You may interested</div>
         </div>
     </div>
 
     <div>
         <div class="flex flex-col-2 m-4 ">
                 <div class="w-12">
-                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-3">Feb</div>
-                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 border-red-500 text-2xl text-gray-400 font-extrabold">21</div>
+                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Feb</div>
+                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-1 pr-1 border-red-400 text-2xl text-gray-400 font-extrabold">21</div>
                 </div>
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline font-medium">
+                        <button class="-mt-1 text-blue-500 hover:underline text-xl">
                             Newmarket Nights
                         </button>
                     </div>
@@ -37,13 +37,13 @@
     <div>
         <div class="flex flex-col-2 m-4 ">
                 <div class="w-12">
-                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-3">Dec</div>
-                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 border-red-500 text-2xl text-gray-400 font-extrabold">31</div>
+                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">31</div>
                 </div>
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline font-medium">
+                        <button class="-mt-1 text-blue-500 hover:underline text-xl">
                             31st Night Celebration
                         </button>
                     </div>
@@ -66,13 +66,13 @@
     <div>
         <div class="flex flex-col-2 m-4 ">
                 <div class="w-12">
-                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-3">Dec</div>
-                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 border-red-500 text-2xl text-gray-400 font-extrabold">16</div>
+                    <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                    <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr-1 border-red-400 text-2xl text-gray-400 font-extrabold">16</div>
                 </div>
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3 pb-2">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline font-medium">
+                        <button class="-mt-1 text-blue-500 hover:underline text-xl">
                             Folk Festival
                         </button>
                     </div>
