--- a/src/app/feature/falcon/default/shared-files/shared-files.component.html
+++ b/src/app/feature/falcon/default/shared-files/shared-files.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="group w-3/4 justify-items-start py-2">
             <p class="hover:underline font-bold cursor-pointer">apple-smart-watch.png</p>
-            <button class="hidden group-hover:block btn btn-xs  bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+            <button class="group-hover:block btn btn-xs  bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
                 <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="">
             </button>
             <button class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
