--- a/src/app/feature/falcon/dasboard/social-add-to-your-feed/social-add-to-your-feed.component.html
+++ b/src/app/feature/falcon/dasboard/social-add-to-your-feed/social-add-to-your-feed.component.html
@@ -1,12 +1,12 @@
-<div class="shadow-lg border-2 w-96 rounded-lg">
-    <div class="w-90 bg-gray-50 h-12">
+<div class="shadow-lg border-2 w-80 rounded-lg">
+    <div class="w-90 bg-gray-50 h-16">
         <div class="flex flex-col-2 ml-3 pt-3">
-            <div class="text-lg font-semibold">Add to your feed</div>
-            <div class="ml-40 hover:underline  text-blue-500  text-sm">See all</div>
+            <div class="text-2xl font-semibold ml-2">Add to your feed</div>
+            <div class="ml-14 hover:underline mt-2 text-blue-500  text-sm">See all</div>
         </div>
     </div>
 
-    <div>
+    <div class=" text-lg ">
         <div class="flex flex-col-2 m-4 ">
             <div class="avatar pb-1">
                 <div class="w-12 rounded-full">
@@ -45,7 +45,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-3 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Kit Harington
                         </button>
                     </div>
@@ -77,7 +77,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-3 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Sophie Turner
                         </button>
                     </div>
@@ -109,7 +109,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-3 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Peter Dinklage
                         </button>
                     </div>
@@ -141,7 +141,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Nikolaj Coster
                         </button>
                     </div>
@@ -170,7 +170,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Isaac Hempstead
                         </button>
                     </div>
@@ -199,7 +199,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Alfie Allen
                         </button>
                     </div>
@@ -228,7 +228,7 @@
             <div class="w-80 mt-0">
                 <div class="grid grid-rows-2 ml-3  border-b-2 border-dashed pb-3">
                     <div class="-mt-1 text-blue-500 hover:underline">
-                        <button class="-mt-1 text-blue-500 hover:underline">
+                        <button class="-mt-1 text-blue-500 hover:underline text-lg">
                             Iain Glen
                         </button>
                     </div>
